unpackaged/objects/KOL_Contract__c.object
<CustomObject>
  <fields>
    <fullName>SBU__c</fullName>
    <inlineHelpText>Add the SBU that signs the contract</inlineHelpText>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Lab</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Imaging</fullName>
        </value>
        <value>
          <fullName>CAD/CAM</fullName>
        </value>
        <value>
          <fullName>Instruments</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
        <value>
          <fullName>Corporate</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Scientific_Posters_Remaining__c</fullName>
    <formula>IF(Scientific_posters__c-Delivered_Scientific_Folders__c&lt;0, 0, Scientific_posters__c-Delivered_Scientific_Folders__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Scientific Posters Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Scientific_posters__c</fullName>
    <description>Number to deliver on agreement/contract</description>
    <inlineHelpText>Number to deliver on agreement/contract</inlineHelpText>
    <label># Scientific Posters Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Start_Date__c</fullName>
    <description>The expected or actual start date of the contract</description>
    <inlineHelpText>The expected or actual start date of the contract</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <description>The Status of the contract</description>
    <inlineHelpText>The Status of the contract</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Draft</fullName>
          <default>true</default>
          <label>Draft</label>
        </value>
        <value>
          <fullName>Under Negotiation</fullName>
        </value>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Expired</fullName>
        </value>
        <value>
          <fullName>Terminated/Cancelled</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Study_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Study Project</description>
    <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
    <label>Study Project</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Tenancy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in checkbox if the contract includes Tenancy</description>
    <inlineHelpText>Deliverables on agreement/contract</inlineHelpText>
    <label>Tenancy</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Total_Fee_Compensation__c</fullName>
    <label>Total Fee Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Total_compensation__c</fullName>
    <formula>Plan_compensation__c +  Travel_compensation__c +  Work_compensation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Travel_compensation__c</fullName>
    <formula>Travel_hours_to_be_compensated__c  *  Hourly_Rate__c * 0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Travel_expenses_covered_by_DI__c</fullName>
    <description>Travel expenses covered by DENTSPLY Implants?</description>
    <inlineHelpText>Travel expenses covered by DENTSPLY Implants?</inlineHelpText>
    <label>Travel expenses covered by DI?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
          <default>true</default>
          <label>No</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Travel_hours_to_be_compensated__c</fullName>
    <label>Travel hours to be compensated</label>
    <summarizedField>KOL_Contract_Deliverable__c.Travel_hours__c</summarizedField>
    <summaryForeignKey>KOL_Contract_Deliverable__c.KOL_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Traveling_honorarium_information__c</fullName>
    <description>To be used if other information is needed</description>
    <inlineHelpText>To be used if other information is needed</inlineHelpText>
    <label>Traveling honorarium information</label>
    <length>1000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Traveling_per_day__c</fullName>
    <description>Honorarium of traveling per day</description>
    <inlineHelpText>Honorarium of traveling per day</inlineHelpText>
    <label>Traveling per day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Traveling_per_half_day__c</fullName>
    <description>Honorarium of traveling per half day</description>
    <inlineHelpText>Honorarium of traveling per half day</inlineHelpText>
    <label>Traveling per half day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Traveling_to_consulting__c</fullName>
    <description>Honorarium of traveling to consulting</description>
    <inlineHelpText>Honorarium of traveling to consulting</inlineHelpText>
    <label>Traveling to consulting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Travelling_compensation__c</fullName>
    <formula>or_Travel_Hours_to_be_compensated__c *  Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travelling compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Type_of_Contract__c</fullName>
    <description>This i type of Speaker/KOL Contract</description>
    <inlineHelpText>This is the type of Speaker/KOL Contract</inlineHelpText>
    <label>Type of Contract</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>One-time Agreeement</fullName>
        </value>
        <value>
          <fullName>Courses</fullName>
        </value>
        <value>
          <fullName>Writing</fullName>
        </value>
        <value>
          <fullName>Consulting</fullName>
        </value>
        <value>
          <fullName>Confidentiality</fullName>
        </value>
        <value>
          <fullName>Copyright</fullName>
        </value>
        <value>
          <fullName>Data collection, Storage and Use</fullName>
        </value>
        <value>
          <fullName>Licensing, Royalty and Commission</fullName>
        </value>
        <value>
          <fullName>Research Collaboration</fullName>
        </value>
        <value>
          <fullName>Grant &amp; Research Endowed Chairs</fullName>
        </value>
        <value>
          <fullName>Ambassador program</fullName>
        </value>
        <value>
          <fullName>Intellectual property</fullName>
        </value>
        <value>
          <fullName>Real property leases</fullName>
        </value>
        <value>
          <fullName>Equipment Loan</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Work_compensation__c</fullName>
    <formula>Hours_of_work_to_be_compensated__c *  Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>of_Planning_Hours_to_be_compensated__c</fullName>
    <inlineHelpText>1-2 hours per lecture hour when speaker is presenting curriculum they have presented on prior occasions.
4-6 hours of planning time per lecture hour when speaker presents curriculum for the first time.
Lectures at major meetings MAY require more time</inlineHelpText>
    <label># of Planning Hours to be compensated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>of_hours_of_work__c</fullName>
    <inlineHelpText># of required working hours, regardless of breaks and meals.  Example: event scheduled from 8 AM to 3 PM would be calculated at 7 work hours</inlineHelpText>
    <label># of hours of work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>or_Travel_Hours_to_be_compensated__c</fullName>
    <inlineHelpText>Estimated time to and from a destination to fulfill contracted work.</inlineHelpText>
    <label># or Travel Hours to be compensated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <label>KOL Contract</label>
  <listViews>
    <fullName>All_KOL_Contracts</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Type_of_Contract__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Duration_of_enlargement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All KOL Contracts</label>
    <language>en_US</language>
    <sharedTo>
      <group>ClinicalAffairs</group>
      <group>Global_Clinical_Affairs</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Contracts_Due_within_30_days</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>End_Date__c</field>
      <operation>lessOrEqual</operation>
      <value>NEXT_N_DAYS:30</value>
    </filters>
    <filters>
      <field>End_Date__c</field>
      <operation>greaterThan</operation>
      <value>YESTERDAY</value>
    </filters>
    <label>Contracts Due within 30 days</label>
  </listViews>
  <listViews>
    <fullName>New_Contracts_Created_last_30_days</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CREATED_DATE</field>
      <operation>greaterOrEqual</operation>
      <value>LAST_N_DAYS:30</value>
    </filters>
    <label>New Contracts Created last 30 days</label>
  </listViews>
  <nameField>
    <label>KOL Contract Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>KOL Contracts</pluralLabel>
  <recordTypes>
    <active>true</active>
    <fullName>Confidentiality_Contract</fullName>
    <label>Confidentiality Contract</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Consulting_Contract</fullName>
    <label>Consulting Contract</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Other_Contract</fullName>
    <label>Other Contract</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Speaking_Contract</fullName>
    <label>Speaking Contract</label>
  </recordTypes>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>